 * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Display the dialog box at
   the center of the screen. Removed unused About dialog box.
 * plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2: Likewise.
 * plugins/dfsound/spucfg-0.1df/main.c: Minor cleanup.
 * plugins/dfinput/dfinput.glade2: Fixed problem with new version of glade-3.
 * plugins/dfcdrom/cfgCdr.glade: Likewise.

October 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Removed the "Enable XA" option
   as we already have such an option in the main emu.
 * plugins/dfsound/spucfg-0.1df/main.c: Likewise.
 * plugins/dfsound/cfg.c: Likewise.
 * plugins/dfsound/spu.c: Likewise.
 * plugins/dfsound/externals.h: Likewise.
 * plugins/dfsound/psemu.c: Likewise.

October 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * gui/Gtk2Gui.c: Disable the "Graphics/Sound/CD-ROM/Controller" menuitems
   when the emu is already running.
 * data/pcsx.glade2: Merged the "Controller 1" and "Controller 2" menuitems.

September 26, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Re-added the "Graphics/Sound/CD-ROM/Controller" menuitems
   in the configuration menu, which are more self-explanative than a "Plugins
   and BIOS".
 * gui/Gtk2Gui.c: Likewise.
 * po/pcsx.pot, po/zh_CN.po, po/zh_TW.po, po/pt_BR.po: Updated.
 * libpcsxcore/cdriso.c: Implemented MDS parsing. MDF files with interleaved
   subchannel data is now supported.
 * win32/gui/WndMain.c: Moved States submenu from File menu to Emulator menu.

September 24, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Fixed filenames with spaces when loading .toc file
   (Thanks dario86). Force byteswap if .toc file is loaded as cdrdao uses
   Big-Endian for CD Audio. Fixed skipping of the first 2 seconds when playing
   CDDA Track #2. Check for image.toc if image.toc.bin is loaded.

September 22, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/gui/CheatDlg.c: Always enable the value inputbox when "New Search" is